# juxtakinematics

./: .gitignore  LICENSE  README.md  experiment.py  pyproject.toml  requirements.txt  server.py  test.py  testPoint.py
bike/: bike.csv
bike_short/: bike_shortt.csv
src/juxtematics/: angle.py  human_profile.py  kinematics.py  point.py  smoothing.py  utils.py
src/juxtematics/calibration/: calibrationHelper.py  calibrationPlane.py
src/kinematics/: angle.py  exporter.py  filtering.py  human_profile.py  kinematics.py  kinematicsDefinition.py  kinematics_v2.py  ops.py  point.py  smoothing.py  utils.py
src/types/: human.py  point.py
