[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "juxtematics"
version = "0.1.2"
description = ""
authors = ["Zhuo Li <zhuolisam0627@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]
keywords = ['biomechanics', 'kinematics', 'sports analysis', 'pose analysis', 'motion analysis']
packages = [
    { include = "juxtematics", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib ="^3.8.2"
numpy = "^1.26.3"
scipy = "^1.12.0"
pydantic = "^2.5.3"
pandas = "^2.2.0"

[tool.poetry.urls]
"Homepage" = "https://github.com/zhuolisam/juxtematics"
"Documentation" = "https://github.com/zhuolisam/juxtematics"
"Source Code" = "https://github.com/zhuolisam/juxtematics"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-multipart = "^0.0.6"

